# lab4sem3

./: CMakeLists.txt  Otchet_po_2_laboratornoy.docx  README.md
include/: JobStream.h  Proc.h
main/: CMakeLists.txt  Source.cpp
